[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/enemy/laser pod.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/laser pod.gd" type="Script" id=2]
[ext_resource path="res://assets/common/projectiles/laser point.png" type="Texture" id=3]
[ext_resource path="res://assets/common/projectiles/Laser.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 242.528

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5, 13 )

[node name="LaserPod" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )
laser = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="LaserPoint" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 3 )
shape = SubResource( 2 )

[node name="Timers" type="Node" parent="."]

[node name="AITimer" type="Timer" parent="Timers"]
wait_time = 2.0

[node name="ShootTimer" type="Timer" parent="Timers"]

[connection signal="body_entered" from="Area2D" to="." method="_on_player_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_player_exited"]
[connection signal="timeout" from="Timers/AITimer" to="." method="_on_AITimer_timeout"]
[connection signal="timeout" from="Timers/ShootTimer" to="." method="_on_ShootTimer_timeout"]
